--- a/lazytooltip/pom.xml
+++ b/lazytooltip/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.addons</groupId>
 	<artifactId>lazytooltip</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>LazyTooltip Add-on</name>
 
 	<properties>
