--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+# build result folders
 target
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
