--- a/lazytooltip-demo/pom.xml
+++ b/lazytooltip-demo/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin.addons</groupId>
 	<artifactId>lazytooltip-demo</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>LazyTooltip Add-on Demo</name>
 
 	<properties>
